Добавлены тесты для рутера, сидера и хендлеров. Изменён build.gradle для возможности запуска тестов